# accounting-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  docker-compose.yaml
db/migrations/: 20220810130308_users.up.sql  20220810140435_funders.up.sql  20220810140445_companies.down.sql  20220810140445_companies.up.sql  20220810140455_funders.up.sql  20220810140506_expenses.up.sql  20220810140506_money_capitals.up.sql  20220810142751_anttorneys.up.sql  20220810150308_users.up.sql  20220810150847_users_data.up.sql  20220831091027_incomes.up.sql  20220903102558_documents.up.sql
migrations/: 20221002215204_initial_schema.down.sql  20221002215204_initial_schema.up.sql  20221002215601_initial_data.down.sql  20221002215601_initial_data.up.sql
src/: accounting_api.rs  auth.rs  file_system.rs  lib.rs  main.rs
src/database/: accounting_api_impl.rs  mod.rs
src/database/models/: company.rs  document.rs  expense.rs  income.rs  mod.rs  money_capital.rs  user.rs
src/database/rows/: anttorney.rs  company.rs  document.rs  income.rs  mod.rs  money_capital.rs  user.rs
src/db/: mod.rs  querable.rs
src/db/rows/: anttorney.rs  company.rs  funder.rs  mod.rs  money_capital.rs  user.rs
src/local_storage/: accounting_api_impl.rs  mod.rs
src/local_storage/models/: company.rs  mod.rs  (+5 more)
src/models/: company.rs  funder.rs  mod.rs  money_capital.rs  user.rs
src/routes/: company.rs  documents.rs  expenses.rs  funders.rs  incomes.rs  mod.rs  money_capitals.rs  user.rs
src/types/: date.rs  error.rs  mod.rs  response.rs  uuid.rs
tests/: company.rs
(+5 files in other folders)
