[package]
name = "accounting-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1"
paste = "1"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres", "sqlx_sqlite"]

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = ["runtime-tokio-rustls", "migrate", "macros", "sqlite", "postgres", "chrono", "uuid", "json", "any"]


[dependencies.uuid]
version = "1.1.2"
features = [
    "serde",
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
