[package]
name = "accounting-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1"
jsonwebtoken = "8.1.1"
thiserror = "1"

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = ["runtime-tokio-rustls", "migrate", "macros", "postgres", "chrono", "json", "offline"]


[dependencies.chrono]
version = "0.4"
features = ["serde"]
